DONE: - attempt to fix sizing and positioning of the sidebar menu icon on mobile. No longer fixed, added new header div.
TODO:
- figure out the tooltip for the menu.

--- a/sass/custom.scss
+++ b/sass/custom.scss
@@ -88,9 +88,9 @@ body{
 }
 
 .sidebar-icon{
-  width: 40px;
-  height: 30px;
-  position: fixed;
+  width: 7vh;
+  height: 6vh;
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
